# PoetryPython

./: pyproject.toml
tests/: test_poetry_demo.py
